2017-05-05 Advanced Onion Router 0.3.1.2

- corrected some plugin calls that were using different calling conventions than expected when compiled with newest versions of gcc (thanks to RoLex and Ruza for reporting this problem)
- added a splitter between the main tree and the configuration page that can be used to resize the configuration page
- if both WindowPos and GuiPlacement3 are found, GuiPlacement3 is used because it stores splitter's position (WindowPos will still be saved to AdvOR.ini)
- messages that are logged before the GUI is created are cached and shown later in the Debug window
- geoip_c.h was updated with GeoIPCountryWhois.csv released on May 2nd; there are 153441 IP ranges having 32 ranges in the fake "A1" country; 31 ranges were approximated to real countries

2017-04-27 Advanced Onion Router 0.3.1.1

- added support for Unicode command line arguments; main() will use argv[] arguments converted from Unicode to UTF-8
- corrected some memory allocation problems that could had caused deallocation of invalid memory regions
- the procedure that searches the memory allocated for xul.dll for a function that can be called to delete cookies from Firefox when changing the identity was removed
- starting with this version, configuration options used by both 0.3x and 0.4x versions of AdvOR will be saved to AdvOR.ini

2017-04-11 Advanced Onion Router 0.3.1.0

- DirServers was renamed to DirAuthorities, to update the list of directory authorities in older AdvOR.ini files
- updated libraries: libevent-2.1.8-stable, openssl-1.1.0e, zlib-1.2.1
- as2asm can now handle files larger than 73 MB
- the AS path tree was updated with latest AS path definitions from cidr-report.org; there are 281211 AS path definitions
- csv2asm was updated with latest AS path definitions
- geoip_c.h was updated with GeoIPCountryWhois.csv released on April 6th; there are 151790 IP ranges having 33 ranges in the fake "A1" country; 32 ranges were approximated to real countries