@@ -764,8 +764,8 @@ BEGIN
 END
 
 1 VERSIONINFO
-FILEVERSION 0,3,1,2
-PRODUCTVERSION 0,3,1,2
+FILEVERSION 0,3,1,3
+PRODUCTVERSION 0,3,1,3
 FILEOS 0x00000004
 FILETYPE 0x00000002
 BEGIN
@@ -773,8 +773,8 @@ BEGIN
   BEGIN
     BLOCK "FFFF0000"
     BEGIN
-      VALUE "FileVersion", "0.3.1.2\0"
-      VALUE "ProductVersion", "0.3.1.2\0"
+      VALUE "FileVersion", "0.3.1.3\0"
+      VALUE "ProductVersion", "0.3.1.3\0"
       VALUE "CompanyName", "Albu Cristian\0"
       VALUE "FileDescription", "Advanced Onion Router\0"
       VALUE "InternalName", "AdvOR\0"
